--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Karl Stolley</title>
+    <link rel="stylesheet" href="css/screen.css" />
   </head>
   <body>
     <header id="header">
