--- a/webrtc/index.html
+++ b/webrtc/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Programming WebRTC: Karl Stolley</title>
+    <link rel="stylesheet" href="../css/screen.css" />
   </head>
   <body>
     <header id="header">
